# managed-vector

./: CMakeLists.txt
tests/: CMakeLists.txt  stringmaker.h  test_base_vector.cpp  test_contiguous_storage.cpp  test_normal_iterator.cpp  test_overlapped_copy.cpp  test_simple.cpp
